# cmake-multiple-glibc

./: CMakeLists.txt  main.cpp
